@@ -136,6 +136,7 @@
 				<ondown>5091</ondown>
 				<viewtype label="$LOCALIZE[40214]">list</viewtype>
 				<visible>Container.Content(artists)</visible>
+				<onclick>RunScript(script.playalbum,albumid=$INFO[ListItem.DBID])</onclick>
 				<focusedlayout height="160" condition="Container.Content(artists)">
 					<control type="group">
 						<top>-50</top>
@@ -234,7 +235,7 @@
 						</control>
 					</control>
 				</itemlayout>
-				<content target="music" sortby="year" sortorder="ascending">$INFO[Container(509).ListItem.DBID,musicdb://artists/,/]</content>
+				<content target="music" sortby="year" sortorder="ascending">$INFO[Container(509).ListItem.FolderPath]</content>
 			</control>
 		</control>
 		<control type="group">
@@ -324,7 +325,7 @@
 						</control>
 					</control>
 				</itemlayout>
-				<content target="music" sortby="track" sortorder="ascending">$INFO[Container(5091).ListItem.DBID,musicdb://albums/,/]</content>
+				<content target="music" sortby="track" sortorder="ascending">$INFO[Container(5091).ListItem.FolderPath]</content>
 			</control>
 		</control>
 	</include>
